# stfapi

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  server.py
src/: main.cpp
